Moved data handling jupyter notebook to their own directory.

--- a/aggregate.ipynb
+++ b/aggregate.ipynb
@@ -13,8 +13,12 @@
     "import numpy as np\n",
     "import pandas as pd\n",
     "import matplotlib.pyplot as plt\n",
-    "import tracker.utils as utils\n",
     "from collections import defaultdict\n",
+    "\n",
+    "from importlib import reload\n",
+    "import trilabtracker\n",
+    "reload(trilabtracker)\n",
+    "import trilabtracker.utils as utils\n",
     "\n",
     "plt.rcParams['figure.figsize'] = 9,6\n",
     "# plt.rcParams['figure.dpi'] = 150\n",
