--- a/data-management/count_raw_data.ipynb
+++ b/data-management/count_raw_data.ipynb
@@ -1,6 +1,13 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Description:** Extract trial data from raw data filenames from the larval schooling project. Count the number of trials of various kinds (grouped by population, age, and number of fish)."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
@@ -74,8 +81,8 @@
     "    rows  = sheet.sheet1.get_all_values()\n",
     "    df    = pd.DataFrame.from_records(rows[1:],columns=rows[0])\n",
     "else:\n",
-    "    project_dir = '..'\n",
-    "    df = pd.read_excel('../trial_list.xlsx')\n",
+    "    project_dir = '../..'\n",
+    "    df = pd.read_excel(join(trial_dir,'trial_list.xlsx'))\n",
     "    \n",
     "df    = df[['n','Group','Tracking (Ethovision)','Video File Name']]\n",
     "df['Tracking (Ethovision)'] = pd.to_numeric(df['Tracking (Ethovision)'], errors='coerce').astype(float)\n",
