--- a/data-management/link_data.ipynb
+++ b/data-management/link_data.ipynb
@@ -1,6 +1,15 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Description:** The output of the analysis of a specific trial is stored in a folder named after that trial. Sometimes it's convenient to have the output of a specific analysis for all the trials together in a folder. This scripts does just that by creating links to the original data.\n",
+    "\n",
+    "**Note:** There's a quicker, more flexible way to achieve that in linux. For example: `eog SF_*/figures/density_histogram.png` opens all density histogram figures from surface fish trials in eye-of-gnome."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
@@ -9,8 +18,8 @@
     "import os\n",
     "from glob import glob\n",
     "\n",
-    "src_dir  = '../tracking/full_20-09-25'\n",
-    "link_dir = '../analysis/links'"
+    "src_dir  = '../../tracking/full_20-09-25'\n",
+    "link_dir = '../../analysis/links'"
    ]
   },
   {
