--- a/data-management/match_videos.ipynb
+++ b/data-management/match_videos.ipynb
@@ -1,6 +1,13 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Description:** Spot renaming errors in the larval schooling project by comparing file names and file sizes between two directories that should contain the same videos."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 48,
    "metadata": {},
