--- a/data-management/repair_corrupt_videos.ipynb
+++ b/data-management/repair_corrupt_videos.ipynb
@@ -1,6 +1,13 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Description:** Repair a specific type of video file corruption encountered in the larval schooling project. The process does not salvage corrupted frames, however it produces videos that are readable by Ethovision and most video players. "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -12,7 +19,7 @@
     "import pandas as pd\n",
     "import numpy as np\n",
     "\n",
-    "raw_dir = '../raw_videos/short'\n",
+    "raw_dir = '../../raw_videos/short'\n",
     "repaired_dir = os.path.join(raw_dir,'repaired')"
    ]
   },
