- Minor edits made while batch tracking latest larval schooling dataset.

--- a/track_batch.ipynb
+++ b/track_batch.ipynb
@@ -19,8 +19,6 @@
     "from glob import glob\n",
     "import cv2\n",
     "import trilabtracker as tt\n",
-    "# import numpy as np\n",
-    "# import pandas as pd\n",
     "\n",
     "# import trilabtracker\n",
     "# reload(trilabtracker)\n",
@@ -37,14 +35,16 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [],
    "source": [
     "# Videos to track.\n",
-    "input_files  = sorted(glob('../raw_videos2/videos/*dpf_*.mp4'))\n",
+    "input_files  = sorted(glob('../raw_videos2/videos/*.mkv'))\n",
     "\n",
     "# Store output in this directory, in a subdirectory named after the video.\n",
-    "tracking_dir = 'output'\n",
+    "tracking_dir = '../raw_videos2/tracking'\n",
     "\n",
     "# Load settings.\n",
     "filtered_settings = tt.load_filtered_settings('settings/larval-schooling-2.xlsx')\n",
@@ -62,9 +62,9 @@
     "#     repaired_file = osp.join(d,'repaired',fn+'-repaired'+ext)\n",
     "#     input_file = repaired_file if osp.exists(repaired_file) else input_file\n",
     "\n",
-    "#     # If a trial file already exists, skip.\n",
-    "#     if osp.exists(osp.join(output_dir,'trial.pik')):\n",
-    "#         return None\n",
+    "    # If a trial file already exists, skip.\n",
+    "    if osp.exists(osp.join(output_dir,'trial.pik')):\n",
+    "        return None\n",
     "    \n",
     "    return dict( input_video=input_file, output_dir=output_dir, \n",
     "                 n_ind=n_ind, trial_name=fn )\n",
@@ -100,18 +100,15 @@
    "outputs": [],
    "source": [
     "# Look for pre-existing background files in this tracking directory.\n",
-    "bkg_dir = osp.relpath(osp.join(tracking_dir,'../full_21-01-17')) # None # \n",
+    "bkg_dir = None\n",
     "\n",
     "#----------------------------------------------------\n",
     "\n",
     "if not osp.exists(tracking_dir):\n",
     "    os.mkdir(tracking_dir)\n",
     "\n",
-    "# tt.reset_logging()\n",
-    "# tt.add_log_stream(sys.stdout, overwrite=True)\n",
-    "for settings in settings_list:\n",
-    "    tt.overprint(settings['trial_name'])\n",
-    "#     print(settings['trial_name'])\n",
+    "for i,settings in enumerate(settings_list):\n",
+    "    tt.overprint(f'{i+1}/{len(settings_list)}  '+settings['trial_name'])\n",
     "    tracker = tt.Tracker(**settings)\n",
     "    \n",
     "    # Create output directory.\n",
@@ -139,10 +136,7 @@
     "    tracker.init_video_input()\n",
     "    tracker.init_background()\n",
     "    tracker.init_secondary_background()\n",
-    "    tracker.release()\n",
-    "\n",
-    "# tt.reset_logging()\n",
-    "print('\\nDone')"
+    "    tracker.release()"
    ]
   },
   {
@@ -163,8 +157,8 @@
     "\n",
     "#----------------------------------------------------\n",
     "\n",
-    "for settings in settings_list:\n",
-    "    tt.overprint(settings['trial_name'])\n",
+    "for i,settings in enumerate(settings_list):\n",
+    "    tt.overprint(f'{i+1}/{len(settings_list)}  '+settings['trial_name'])\n",
     "    \n",
     "    f = osp.join(settings['output_dir'], 'tank.pik')\n",
     "    if osp.exists(f):\n",
@@ -184,9 +178,7 @@
     "    tracker.init_video_input()\n",
     "    tracker.init_background()\n",
     "    tracker.release()\n",
-    "    tracker.init_tank(thresh=4,dilate=20)\n",
-    "\n",
-    "print('\\nDone')"
+    "    tracker.init_tank(thresh=2,dilate=80)"
    ]
   },
   {
@@ -214,7 +206,7 @@
    },
    "outputs": [],
    "source": [
-    "n_threads = 1\n",
+    "n_threads = 4\n",
     "# This multi-threading does not work in Windows. \n",
     "# If the OS is Windows, use a single thread.\n",
     "if n_threads==1 or ('windows' in platform.system().lower()):\n",
@@ -244,29 +236,29 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import numpy as np\n",
-    "import matplotlib.pyplot as plt\n",
-    "from matplotlib.patches import Ellipse\n",
+    "# import numpy as np\n",
+    "# import matplotlib.pyplot as plt\n",
+    "# from matplotlib.patches import Ellipse\n",
     "\n",
-    "trial_files = glob(osp.join(tracking_dir,'*/trial.pik'))\n",
-    "print(*trial_files, sep='\\n', end='\\n\\n')\n",
-    "trial_file = trial_files[0]\n",
+    "# trial_files = glob(osp.join(tracking_dir,'*/trial.pik'))\n",
+    "# print(*trial_files, sep='\\n', end='\\n\\n')\n",
+    "# trial_file = trial_files[0]\n",
     "\n",
-    "trial = tt.load_trial(trial_file)\n",
-    "data,frames = trial['data'],trial['frame_list']\n",
+    "# trial = tt.load_trial(trial_file)\n",
+    "# data,frames = trial['data'],trial['frame_list']\n",
     "\n",
-    "plt.figure(figsize=(6,6))\n",
-    "xy = trial['data'][:,:,:2]\n",
-    "for i in range(xy.shape[1]):\n",
-    "    plt.plot(*xy[:,i,:].T,label=f'{i}')\n",
-    "xc,yc,R = (trial['tank'][k] for k in ['xc', 'yc', 'R'])\n",
-    "print(xc,yc,R)\n",
-    "plt.gca().add_artist(Ellipse((xc,yc), 2*R, 2*R, fc='None', ec='k', lw=0.5))\n",
-    "plt.legend(loc=(1.05,0.5))\n",
-    "plt.axis('equal')\n",
-    "plt.xlim(xc-1.1*R,xc+1.1*R)\n",
-    "plt.ylim(yc-1.1*R,yc+1.1*R)\n",
-    "plt.show()"
+    "# plt.figure(figsize=(6,6))\n",
+    "# xy = trial['data'][:,:,:2]\n",
+    "# for i in range(xy.shape[1]):\n",
+    "#     plt.plot(*xy[:,i,:].T,label=f'{i}')\n",
+    "# xc,yc,R = (trial['tank'][k] for k in ['xc', 'yc', 'R'])\n",
+    "# print(xc,yc,R)\n",
+    "# plt.gca().add_artist(Ellipse((xc,yc), 2*R, 2*R, fc='None', ec='k', lw=0.5))\n",
+    "# plt.legend(loc=(1.05,0.5))\n",
+    "# plt.axis('equal')\n",
+    "# plt.xlim(xc-1.1*R,xc+1.1*R)\n",
+    "# plt.ylim(yc-1.1*R,yc+1.1*R)\n",
+    "# plt.show()"
    ]
   },
   {
