--- a/track.ipynb
+++ b/track.ipynb
@@ -32,7 +32,7 @@
    "outputs": [],
    "source": [
     "# Video to track.\n",
-    "input_file   = '../videos/Pa_sat_7dpf_GroupA_n2a_202104171441.avi'\n",
+    "input_file   = '../raw_videos2/videos/pa_wed_28dpf_groupA_n5_202104281846.avi'\n",
     "\n",
     "# Store output in this directory, in a subdirectory named after the video.\n",
     "tracking_dir = 'output'\n",
@@ -66,10 +66,10 @@
     "tt.add_log_stream(sys.stdout, overwrite=True)\n",
     "logging.info(settings['input_video']+'\\n')\n",
     "tracker = tt.Tracker(**settings)\n",
-    "# tracker.init_all()\n",
+    "tracker.init_all()\n",
     "\n",
-    "# # Run tracker.\n",
-    "# tracker.track_video()\n",
+    "# Run tracker.\n",
+    "tracker.track_video()\n",
     "\n",
     "tt.reset_logging()"
    ]
@@ -109,9 +109,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python (main)",
    "language": "python",
-   "name": "python3"
+   "name": "main"
   },
   "language_info": {
    "codemirror_mode": {
@@ -123,7 +123,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.6.10"
   }
  },
  "nbformat": 4,
