- Viewer: Changed the behavior of "jump to next/previous issue" to always jump to a different set of bad frames. Previously "previous/next issue" meant "previous/next bad frame", even if the frame in question was part of the same consecutive set of bad frames as the current frame.

--- a/track.ipynb
+++ b/track.ipynb
@@ -32,7 +32,7 @@
    "outputs": [],
    "source": [
     "# Video to track.\n",
-    "input_file   = '../raw_videos2/videos/pa_wed_28dpf_groupA_n5_202104281846.avi'\n",
+    "input_file   = '../raw_videos2/videos/sf_thur_7dpf_groupA_n5b_20210513_2021-05-13-142401.mkv'\n",
     "\n",
     "# Store output in this directory, in a subdirectory named after the video.\n",
     "tracking_dir = 'output'\n",
@@ -123,7 +123,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.10"
+   "version": "3.8.10"
   }
  },
  "nbformat": 4,
