--- a/report_progress.ipynb
+++ b/report_progress.ipynb
@@ -1,6 +1,13 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Pick a set of trials to monitor."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -10,8 +17,38 @@
     "from glob import glob\n",
     "from trilabtracker.utils import tracking_status\n",
     "\n",
-    "trial_dirs = sorted(glob('../raw_videos2/tracking/*'))\n",
-    "len(trial_dirs)"
+    "trial_dirs = sorted(glob('../dataset1/tracking/21-07-12_full/*'))\n",
+    "print('Number of trials selected:', len(trial_dirs))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Tracking status summary\n",
+    "Number of trials in each status."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "statuses = ['no log','tracking','complete','failed']\n",
+    "status_count = { s:0 for s in statuses }\n",
+    "for path in trial_dirs:\n",
+    "    for s in statuses:\n",
+    "        if s in tracking_status(path)['status']:\n",
+    "            status_count[s] += 1\n",
+    "display(status_count)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Detailed status of ongoing tracking jobs"
    ]
   },
   {
@@ -34,18 +71,10 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "statuses = ['no log','tracking','complete','failed']\n",
-    "status_count = { s:0 for s in statuses }\n",
-    "for path in trial_dirs:\n",
-    "    for s in statuses:\n",
-    "        if s in tracking_status(path)['status']:\n",
-    "            status_count[s] += 1\n",
-    "display(status_count)"
+    "### Clean up failed trackings"
    ]
   },
   {
@@ -95,7 +124,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.10"
+   "version": "3.8.10"
   }
  },
  "nbformat": 4,
