- Updated "utils.load_trial" so it loads fixes correctly. In order to avoid circular imports I had to take the fixing functions out of "gui_classes.py" and into their own submodule "fixer.py".   Note: The notebooks using "load_trial", like "analyze.ipynb" and "convert-to-excel.ipynb", will need to be updated accordingly.
- Updated module reloading in "track_batch.ipynb". Some other notebooks have older variants of the reloading code. This latest version should reload every submodule, however it relies on the "__all__" variable in "__init__.py" having the correct order: if submodule A imports submodule B, then B need to come before A in the list so it gets reloaded first.

--- a/track_batch.ipynb
+++ b/track_batch.ipynb
@@ -6,7 +6,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from importlib import reload\n",
     "import os\n",
     "import os.path as osp\n",
     "import sys\n",
@@ -20,9 +19,13 @@
     "import cv2\n",
     "import trilabtracker as tt\n",
     "\n",
-    "# import trilabtracker\n",
-    "# reload(trilabtracker)\n",
-    "# import trilabtracker as tt"
+    "from importlib import reload\n",
+    "# The loop below reloads every submodule. It only works first time if \n",
+    "# \"tt.__all__\" has the correct order: if submodule A imports submodule B, \n",
+    "# then B needs to be reloaded before A.\n",
+    "for m in tt.__all__:\n",
+    "    eval(f'reload(tt.{m})')\n",
+    "reload(tt)"
    ]
   },
   {
