- Updated "utils.load_trial" to use the timestamps file when there is one and use fps-based timestamps otherwise.
- "analyzer.py": Removed the d_wall cut.

- "analyzer.py": Stopped using "globals().update" to pull variable definitions from the "trial" argument. It was conflicting at least one global-scope variable (the submodule "tank").

--- a/data-management/convert-to-excel.ipynb
+++ b/data-management/convert-to-excel.ipynb
@@ -2,9 +2,20 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 37,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'/media/yaouen/LarvalSchooling/larval_schooling/trilab-tracker/data-management'"
+      ]
+     },
+     "execution_count": 37,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "import os, sys, re\n",
     "from glob import glob\n",
@@ -28,16 +39,66 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Load trial info.\n",
+    "## Prepare trial data.\n",
     "\n",
     "Prepare a dictionary of trials to analyze with basic info for each (path to trial file, population, age, number of individuals, etc)."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 35,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>age</th>\n",
+       "      <th>7</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>pop</th>\n",
+       "      <th>n_ind</th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>SF</th>\n",
+       "      <th>5</th>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "age        7\n",
+       "pop n_ind   \n",
+       "SF  5      1"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "tank_diameter_vs_age = { 7:9.6, 14:10.4, 21:12.8, 28:17.7, 42:33.8,\n",
     "                         56:33.8, 70:33.8, 84:3.8 }\n",
@@ -74,7 +135,6 @@
     "count.columns = count.columns.droplevel()\n",
     "count[pd.isna(count)] = 0\n",
     "count = count.astype(int)\n",
-    "# print('Number of trials of each type:')\n",
     "display(count)\n",
     "\n",
     "def matching_trials(pop=None, age=None, n_ind=None, df=trials):\n",
@@ -92,12 +152,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Visualize unfixed and fixed trajectories around a fix."
+    "## Visualize unfixed and fixed trajectories around a fix."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -123,14 +183,36 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Convert to excel."
+    "## Convert to excel."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 61,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 1/1 [00:00<00:00, 33.73it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "../output/sf_thur_7dpf_groupA_n5b_20210513_2021-05-13-142401/sf_thur_7dpf_groupA_n5b_20210513_2021-05-13-142401_new.xlsx\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "from importlib import reload\n",
     "for m in tt.__all__:\n",
@@ -138,22 +220,19 @@
     "reload(tt)\n",
     "\n",
     "for trial_file in tqdm(trials.index):\n",
-    "    trial = tt.load_trial(trial_file, load_fixes=True)\n",
+    "    trial = parse_trial_file(trial_file)\n",
+    "    trial = tt.preprocess_trial(trial)\n",
     "    globals().update(trial)\n",
-    "    trial_name = os.path.split(trial['trial_dir'])[1]\n",
     "    \n",
-    "#     fx = f'../excel/{trial_name}.xlsx'\n",
-    "    fx = f'{trial_dir}/{trial_name}.xlsx'\n",
+    "    fx = f'../excel/{trial_name}.xlsx'\n",
+    "    print(fx)\n",
     "    if os.path.exists(fx):\n",
     "        continue\n",
     "    \n",
-    "    time = tt.load_timestamps(tt.locate_timestamps(trial_dir))\n",
-    "    time = time[time.index<len(data)]\n",
-    "    \n",
     "    writer = pd.ExcelWriter(fx)\n",
     "    for i in range(n_ind):\n",
-    "        df = pd.DataFrame(data[:,i,:3], columns=['X (cm)', 'Y (cm)', 'Direction (rad)'])\n",
-    "        df = pd.concat([time,df], axis=1)\n",
+    "        df = pd.DataFrame(np.concatenate([time[:,None],data[:,i,:3]], axis=1), \n",
+    "                          columns=['Time', 'X (cm)', 'Y (cm)', 'Direction (rad)'])\n",
     "        df.to_excel(writer, sheet_name=f'fish {i+1}', index=None)\n",
     "    for sheet in writer.sheets.values():\n",
     "        for col in sheet.columns:\n",
