--- a/track.ipynb
+++ b/track.ipynb
@@ -32,13 +32,13 @@
    "outputs": [],
    "source": [
     "# Video to track.\n",
-    "input_file   = '../raw_videos2/videos/sf_thur_7dpf_groupA_n5b_20210513_2021-05-13-142401.mkv'\n",
+    "input_file   = '../raw_videos/20190208_SF_n1_t1_2233.mp4'\n",
     "\n",
     "# Store output in this directory, in a subdirectory named after the video.\n",
     "tracking_dir = 'output'\n",
     "\n",
     "# Load predefined settings...\n",
-    "settings = tt.load_filtered_settings('settings/larval-schooling-2.xlsx')['*']\n",
+    "settings = tt.load_filtered_settings('settings/adult-schooling.xlsx')['*']\n",
     "# # ..or define your own.\n",
     "# settings = dict( t_start = 0, t_end = -1, n_extra = 1, n_report = 100, \n",
     "#                  n_blur = 5, block_size = 31, threshold_offset = 13, \n",
