--- a/track_batch.ipynb
+++ b/track_batch.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -34,20 +34,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {
     "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2/133\n",
+      "20190208_SF_n1_t1_2233\n",
+      "20190211_Pa_n1_t1_2143\n"
+     ]
+    }
+   ],
    "source": [
     "# Videos to track.\n",
-    "input_files  = sorted(glob('../raw_videos2/videos/*.mkv'))\n",
+    "input_files  = sorted(glob('../raw_videos/*.mp4'))\n",
     "\n",
     "# Store output in this directory, in a subdirectory named after the video.\n",
-    "tracking_dir = '../raw_videos2/tracking'\n",
+    "tracking_dir = 'output'\n",
     "\n",
     "# Load settings.\n",
-    "filtered_settings = tt.load_filtered_settings('settings/larval-schooling-2.xlsx')\n",
+    "filtered_settings = tt.load_filtered_settings('settings/adult-schooling.xlsx')\n",
     "\n",
     "# Define how to extract trial info from the video file's path.\n",
     "# Return None if the trial is to be skipped.\n",
@@ -56,11 +66,11 @@
     "    d,fn       = osp.split(input_file)\n",
     "    fn,ext     = osp.splitext(fn)\n",
     "    output_dir = osp.join(tracking_dir,fn)\n",
-    "    n_ind      = int(re.findall('_n(\\d+)[^\\d]*_',fn)[0])\n",
+    "    n_ind      = int(re.findall('_n(\\d+)',fn)[0])\n",
     "    \n",
-    "#     # If a repaired version exists, use that instead.\n",
-    "#     repaired_file = osp.join(d,'repaired',fn+'-repaired'+ext)\n",
-    "#     input_file = repaired_file if osp.exists(repaired_file) else input_file\n",
+    "    # If a repaired version exists, use that instead.\n",
+    "    repaired_file = osp.join(d,'repaired',fn+'-repaired'+ext)\n",
+    "    input_file = repaired_file if osp.exists(repaired_file) else input_file\n",
     "\n",
     "    # If a trial file already exists, skip.\n",
     "    if osp.exists(osp.join(output_dir,'trial.pik')):\n",
@@ -81,7 +91,7 @@
     "    settings.update(info)\n",
     "    settings_list.append(settings)\n",
     "\n",
-    "# print(f'{len(settings_list)}/{len(input_files)}')\n",
+    "print(f'{len(settings_list)}/{len(input_files)}')\n",
     "for settings in settings_list:\n",
     "    print(settings['trial_name'])"
    ]
@@ -95,12 +105,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\r",
+      "                                                                                                                                                                                                        \r",
+      "1/2  20190208_SF_n1_t1_2233\r",
+      "                                                                                                                                                                                                        \r",
+      "2/2  20190211_Pa_n1_t1_2143"
+     ]
+    }
+   ],
    "source": [
     "# Look for pre-existing background files in this tracking directory.\n",
-    "bkg_dir = None\n",
+    "bkg_dir = None # '../dataset1/tracking/21-01-22_background-and-tank'\n",
     "\n",
     "#----------------------------------------------------\n",
     "\n",
@@ -117,26 +139,22 @@
     "    tracker.init_video_link()\n",
     "    \n",
     "    # If background file(s) already exist, don't do anything.\n",
-    "    b  = settings['bkg.secondary_subtraction']\n",
-    "    f1 = osp.join(tracker.output_dir,'background.npz')\n",
-    "    f2 = osp.join(tracker.output_dir,'background2.npz')\n",
-    "    if osp.exists(f1) and ( (not b) or osp.exists(f2) ):\n",
-    "        continue\n",
-    "    # If background file exists in bkg_dir, use it.\n",
-    "    try:\n",
-    "        d = osp.join(bkg_dir,settings['trial_name'])\n",
-    "        for i in ['']: #,'2']:\n",
-    "            for e in ['npz','png']:\n",
-    "                f1 = osp.join(d,f'background{i}.{e}')\n",
-    "                f2 = osp.join(settings['output_dir'],f'background{i}.{e}')\n",
+    "    if osp.exists(str(bkg_dir)):\n",
+    "        for fn in ['background.npz']: #,'background2.npz']:\n",
+    "            f1 = osp.join(bkg_dir, settings['trial_name'], fn)\n",
+    "            f2 = osp.join(tracker.output_dir, fn)\n",
+    "            if osp.exists(f1) and (not osp.exists(f2)) \\\n",
+    "               and (fn=='background.npz' or settings['bkg.secondary_subtraction']):\n",
     "                shutil.copy2(f1,f2)\n",
-    "    except:\n",
-    "        pass\n",
+    "    \n",
     "    # Otherwise, compute background.\n",
-    "    tracker.init_video_input()\n",
-    "    tracker.init_background()\n",
-    "    tracker.init_secondary_background()\n",
-    "    tracker.release()"
+    "    if (not osp.exists(osp.join(tracker.output_dir, 'background.pik'))) or \\\n",
+    "       (settings['bkg.secondary_subtraction'] and \\\n",
+    "          (not osp.exists(osp.join(tracker.output_dir, 'background2.pik')))):\n",
+    "        tracker.init_video_input()\n",
+    "        tracker.init_background()\n",
+    "        tracker.init_secondary_background()\n",
+    "        tracker.release()"
    ]
   },
   {
@@ -148,31 +166,45 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\r",
+      "                                                                                                                                                                                                        \r",
+      "1/2  20190208_SF_n1_t1_2233\r",
+      "                                                                                                                                                                                                        \r",
+      "2/2  20190211_Pa_n1_t1_2143"
+     ]
+    }
+   ],
    "source": [
+    "import trilabtracker\n",
+    "reload(trilabtracker)\n",
+    "reload(trilabtracker.tank)\n",
+    "reload(trilabtracker.tracker)\n",
+    "import trilabtracker as tt\n",
+    "\n",
     "# Look for pre-existing tank files in this tracking directory.\n",
-    "bkg_dir = osp.relpath(osp.join(tracking_dir,'../full_21-01-17')) # None # \n",
+    "# tank_dir = osp.relpath(osp.join(tracking_dir,'../full_21-01-17')) # None # \n",
+    "tank_dir = '.'\n",
     "\n",
     "#----------------------------------------------------\n",
     "\n",
     "for i,settings in enumerate(settings_list):\n",
     "    tt.overprint(f'{i+1}/{len(settings_list)}  '+settings['trial_name'])\n",
     "    \n",
-    "    f = osp.join(settings['output_dir'], 'tank.pik')\n",
-    "    if osp.exists(f):\n",
+    "    f2 = osp.join(settings['output_dir'], 'tank.pik')\n",
+    "    if osp.exists(f2):\n",
     "        continue\n",
     "    \n",
-    "    try:\n",
-    "        d = osp.join(tank_dir, settings['trial_name'])\n",
-    "        for e in ['pik','png']:\n",
-    "            f2 = osp.join(settings['output_dir'],f'tank.{e}')\n",
-    "            if not osp.exists(f2):\n",
-    "                f1 = osp.join(d,f'tank.{e}')\n",
-    "                shutil.copy2(f1,f2)\n",
-    "    except:\n",
-    "        pass\n",
+    "    f1 = osp.join(tank_dir, settings['trial_name'], 'tank.pik')\n",
+    "    if osp.exists(str(tank_dir)):\n",
+    "        if osp.exists(f1) and (not osp.exists(f2)):\n",
+    "            shutil.copy2(f1,f2)\n",
     "    \n",
     "    tracker = tt.Tracker(**settings)\n",
     "    tracker.init_video_input()\n",
@@ -183,7 +215,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -200,7 +232,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {
     "scrolled": false
    },
@@ -285,7 +317,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.10"
+   "version": "3.8.10"
   }
  },
  "nbformat": 4,
