--- a/track.ipynb
+++ b/track.ipynb
@@ -2,11 +2,21 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'/media/yaouen/disk2/adult_schooling/trilab-tracker'"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "from importlib import reload\n",
     "import os\n",
     "import sys\n",
     "import platform\n",
@@ -20,25 +30,50 @@
     "# import numpy as np\n",
     "# import pandas as pd\n",
     "\n",
-    "# import trilabtracker\n",
-    "# reload(trilabtracker)\n",
-    "# import trilabtracker as tt"
+    "from importlib import reload\n",
+    "for m in tt.__all__:\n",
+    "    eval(f'reload(tt.{m})')\n",
+    "reload(tt)\n",
+    "\n",
+    "os.getcwd()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 86,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "     ../raw_videos/20190208_SF_n10_t1_2722.mp4                                                                                                                                                          \n",
+      "     Done                                                                                                                                                                                               "
+     ]
+    }
+   ],
    "source": [
+    "from importlib import reload\n",
+    "for m in tt.__all__:\n",
+    "    eval(f'reload(tt.{m})')\n",
+    "reload(tt)\n",
+    "\n",
     "# Video to track.\n",
-    "input_file   = '../raw_videos/20190208_SF_n1_t1_2233.mp4'\n",
+    "input_file   = '../raw_videos/20190208_SF_n10_t1_2722.mp4'\n",
     "\n",
     "# Store output in this directory, in a subdirectory named after the video.\n",
     "tracking_dir = 'output'\n",
     "\n",
+    "# Extract trial name and number of fish from the video file's path.\n",
+    "d,fn       = os.path.split(input_file)\n",
+    "fn,ext     = os.path.splitext(fn)\n",
+    "output_dir = os.path.join(tracking_dir,fn)\n",
+    "n_ind      = int(re.findall('_n(\\d+)[^\\d]*_',fn)[0])\n",
+    "\n",
     "# Load predefined settings...\n",
-    "settings = tt.load_filtered_settings('settings/adult-schooling.xlsx')['*']\n",
+    "# settings = tt.load_filtered_settings('settings/adult-schooling.xlsx')['*']\n",
+    "filtered_settings = tt.load_filtered_settings('settings/adult-schooling.xlsx')\n",
+    "settings = tt.apply_filtered_settings(filtered_settings, fn)\n",
     "# # ..or define your own.\n",
     "# settings = dict( t_start = 0, t_end = -1, n_extra = 1, n_report = 100, \n",
     "#                  n_blur = 5, block_size = 31, threshold_offset = 13, \n",
@@ -49,12 +84,6 @@
     "#                              contrast_factor = 5, secondary_subtraction = True,\n",
     "#                              secondary_factor = 1 )\n",
     "#                ) \n",
-    "\n",
-    "# Extract trial name and number of fish from the video file's path.\n",
-    "d,fn       = os.path.split(input_file)\n",
-    "fn,ext     = os.path.splitext(fn)\n",
-    "output_dir = os.path.join(tracking_dir,fn)\n",
-    "n_ind      = int(re.findall('_n(\\d+)[^\\d]*_',fn)[0])\n",
     "\n",
     "# Create tracker. Compute background. Detect tank interactively.\n",
     "# settings = tt.apply_filtered_settings(filtered_settings, fn)\n",
@@ -93,10 +122,49 @@
    "source": [
     "# import matplotlib.pyplot as plt\n",
     "\n",
-    "# trial = tt.load_trial('output/Pa_sat_7dpf_GroupA_n2a_202104171441/trial.pik')\n",
+    "# trial = tt.load_trial(tracker.trial_file)\n",
     "# xy = trial['data'][:,:,:2]\n",
     "# for i in range(xy.shape[1]):\n",
     "#     plt.plot(*xy[:,i,:2].T)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 61,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[251.30090791, 276.32416953],\n",
+       "       [248.87236679, 272.15555556],\n",
+       "       [246.63424125, 268.33823529],\n",
+       "       [244.11477411, 264.69575758],\n",
+       "       [240.89411765, 261.11446541],\n",
+       "       [237.79411765, 255.87453875],\n",
+       "       [234.84537389, 248.81884058],\n",
+       "       [236.79651163, 236.79651163],\n",
+       "       [232.38751715, 232.38751715],\n",
+       "       [227.86728395, 227.86728395],\n",
+       "       [222.81636205, 222.81636205],\n",
+       "       [218.21319797, 218.21319797],\n",
+       "       [215.74090247, 215.74090247],\n",
+       "       [215.21106557, 215.21106557],\n",
+       "       [216.27249191, 216.27249191],\n",
+       "       [225.433213  , 208.06615776],\n",
+       "       [227.97476341, 207.09311741],\n",
+       "       [230.59188034, 207.31086142]])"
+      ]
+     },
+     "execution_count": 61,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "trial = tt.load_trial(tracker.trial_file)\n",
+    "xy = trial['data'][:,[5,7],0]\n",
+    "xy"
    ]
   },
   {
