- Minor fixes in "track.ipynb" and "track_batch.ipynb".

--- a/track.ipynb
+++ b/track.ipynb
@@ -6,7 +6,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from importlib import reload\n",
     "import os\n",
     "import sys\n",
     "import platform\n",
@@ -20,9 +19,10 @@
     "# import numpy as np\n",
     "# import pandas as pd\n",
     "\n",
-    "# import trilabtracker\n",
-    "# reload(trilabtracker)\n",
-    "# import trilabtracker as tt"
+    "from importlib import reload\n",
+    "for m in tt.__all__:\n",
+    "    eval(f'reload(tt.{m})')\n",
+    "reload(tt)"
    ]
   },
   {
@@ -93,7 +93,7 @@
    "source": [
     "# import matplotlib.pyplot as plt\n",
     "\n",
-    "# trial = tt.load_trial('output/Pa_sat_7dpf_GroupA_n2a_202104171441/trial.pik')\n",
+    "# trial = tt.load_trial(tracker.output_dir)\n",
     "# xy = trial['data'][:,:,:2]\n",
     "# for i in range(xy.shape[1]):\n",
     "#     plt.plot(*xy[:,i,:2].T)"
