--- a/track_batch.ipynb
+++ b/track_batch.ipynb
@@ -129,9 +129,9 @@
     "                shutil.copy2(f1,f2)\n",
     "    \n",
     "    # Otherwise, compute background.\n",
-    "    if (not osp.join(tracker.output_dir, 'background.pik')) or \\\n",
+    "    if (not osp.exists(osp.join(tracker.output_dir, 'background.pik'))) or \\\n",
     "       (settings['bkg.secondary_subtraction'] and \\\n",
-    "          (not osp.join(tracker.output_dir, 'background2.pik'))):\n",
+    "          (not osp.exists(osp.join(tracker.output_dir, 'background2.pik')))):\n",
     "        tracker.init_video_input()\n",
     "        tracker.init_background()\n",
     "        tracker.init_secondary_background()\n",
