- Add one-sided background subtraction controlled by the "object_type" in the constructor of "Track". Use "dark" to look for objects darker than the background, "light" for objects lighter than the background, "both" for both. The original intent was to help with spotlight reflections in the IR-lit dark trials, however it doesn't work because the reflection flickers, the flicker factors into the background and ends up creating both darker-than-background and lighter-than-background spots.
- Tweaked traceback reporting in "tracker.py" and "gui_main.py".

--- a/report_progress.ipynb
+++ b/report_progress.ipynb
@@ -15,9 +15,15 @@
    "source": [
     "import os, sys\n",
     "from glob import glob\n",
-    "from trilabtracker.utils import tracking_status\n",
+    "# from trilabtracker.utils import tracking_status\n",
+    "import trilabtracker as tt\n",
     "\n",
-    "trial_dirs = sorted(glob('output/*'))\n",
+    "from importlib import reload\n",
+    "for m in tt.__all__:\n",
+    "    eval(f'reload(tt.{m})')\n",
+    "reload(tt)\n",
+    "\n",
+    "trial_dirs = sorted(glob('tracking_output/*'))\n",
     "print('Number of trials selected:', len(trial_dirs))"
    ]
   },
@@ -39,7 +45,7 @@
     "status_count = { s:0 for s in statuses }\n",
     "for path in trial_dirs:\n",
     "    for s in statuses:\n",
-    "        if s in tracking_status(path)['status']:\n",
+    "        if s in tt.tracking_status(path)['status']:\n",
     "            status_count[s] += 1\n",
     "display(status_count)"
    ]
@@ -61,7 +67,7 @@
    "source": [
     "for trial_dir in trial_dirs:\n",
     "    try:\n",
-    "        globals().update(tracking_status(trial_dir))\n",
+    "        globals().update(tt.tracking_status(trial_dir))\n",
     "        if status in ['complete','no log']:\n",
     "#         if 'tracking' not in status:\n",
     "            continue\n",
@@ -90,7 +96,7 @@
     "'''\n",
     "\n",
     "for trial_dir in trial_dirs:\n",
-    "    locals().update(tracking_status(trial_dir))\n",
+    "    locals().update(tt.tracking_status(trial_dir))\n",
     "#     if status=='failed':\n",
     "    if 'tracking' in status:\n",
     "        trial_file = os.path.join(trial_dir,'trial.pik')\n",
