--- a/track.ipynb
+++ b/track.ipynb
@@ -17,7 +17,7 @@
     "from glob import glob\n",
     "import trilabtracker as tt\n",
     "# import numpy as np\n",
-    "# import pandas as pd\n",
+    "import pandas as pd\n",
     "\n",
     "from importlib import reload\n",
     "for m in tt.__all__:\n",
@@ -42,7 +42,7 @@
     "input_file   = '../raw_videos/20191219_SF_n10_t1_dark.mp4'\n",
     "\n",
     "# Store output in this directory, in a subdirectory named after the video.\n",
-    "tracking_dir = 'output'\n",
+    "tracking_dir = 'tracking_output'\n",
     "\n",
     "# Extract trial name and number of fish from the video file's path.\n",
     "d,fn       = os.path.split(input_file)\n",
@@ -92,6 +92,15 @@
    "outputs": [],
    "source": [
     "tt.start_gui(tracker.output_dir)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "type('ha')==str"
    ]
   },
   {
