--- a/track_batch.ipynb
+++ b/track_batch.ipynb
@@ -17,6 +17,7 @@
     "import multiprocessing\n",
     "from glob import glob\n",
     "import cv2\n",
+    "import pandas as pd\n",
     "import trilabtracker as tt\n",
     "\n",
     "from importlib import reload\n",
@@ -25,7 +26,9 @@
     "# then B needs to be reloaded before A.\n",
     "for m in tt.__all__:\n",
     "    eval(f'reload(tt.{m})')\n",
-    "reload(tt)"
+    "reload(tt)\n",
+    "\n",
+    "os.getcwd()"
    ]
   },
   {
@@ -44,13 +47,18 @@
    "outputs": [],
    "source": [
     "# Videos to track.\n",
-    "input_files  = sorted(glob('../raw_videos/*.mp4'))\n",
+    "input_files  = sorted(glob('../raw_videos/*.m*'))\n",
+    "# input_files   = ['../raw_videos/20190513_SF_n5_t5_3128.mp4']\n",
     "\n",
     "# Store output in this directory, in a subdirectory named after the video.\n",
-    "tracking_dir = 'output'\n",
+    "tracking_dir = 'tracking_output'\n",
     "\n",
     "# Load settings.\n",
     "filtered_settings = tt.load_filtered_settings('settings/adult-schooling.xlsx')\n",
+    "\n",
+    "# Load list of trial names to use in the analysis.\n",
+    "valid_trials = open('settings/adult-trials-to-analyze.txt').readlines()\n",
+    "valid_trials = [ fn.strip() for fn in valid_trials ]\n",
     "\n",
     "# Define how to extract trial info from the video file's path.\n",
     "# Return None if the trial is to be skipped.\n",
@@ -59,22 +67,32 @@
     "    d,fn       = osp.split(input_file)\n",
     "    fn,ext     = osp.splitext(fn)\n",
     "    output_dir = osp.join(tracking_dir,fn)\n",
-    "    n_ind      = int(re.findall('_n(\\d+)',fn)[0])\n",
+    "#     n_ind      = int(re.findall('_n(\\d+)',fn)[0])\n",
+    "    _,pop,n    = fn.split('_')[:3]\n",
+    "    n_ind      = int(n[1:])\n",
+    "    pop        = pop.lower()\n",
+    "    if 'dark' in fn.lower():\n",
+    "        pop = pop+'-dark'\n",
+    "        # Skip dark trials until I implement one-sided background subtraction.\n",
+    "#         return None\n",
+    "    \n",
+    "    if not fn in valid_trials:\n",
+    "        return None\n",
     "    \n",
     "#     # If a repaired version exists, use that instead.\n",
     "#     repaired_file = osp.join(d,'repaired',fn+'-repaired'+ext)\n",
     "#     input_file = repaired_file if osp.exists(repaired_file) else input_file\n",
     "\n",
-    "    # If a trial file already exists, skip.\n",
-    "    if osp.exists(osp.join(output_dir,'trial.pik')):\n",
-    "        return None\n",
+    "#     # If a trial file already exists, skip.\n",
+    "#     if osp.exists(osp.join(output_dir,'trial.pik')):\n",
+    "#         return None\n",
     "    \n",
     "    return dict( input_video=input_file, output_dir=output_dir, \n",
-    "                 n_ind=n_ind, trial_name=fn )\n",
+    "                 n_ind=n_ind, pop=pop, trial_name=fn )\n",
     "    \n",
     "#----------------------------------------------------\n",
-    "\n",
     "# Create settings for input files.\n",
+    "\n",
     "settings_list = []\n",
     "for input_file in input_files:\n",
     "    info = extract_trial_info(input_file)\n",
@@ -85,8 +103,21 @@
     "    settings_list.append(settings)\n",
     "\n",
     "# print(f'{len(settings_list)}/{len(input_files)}')\n",
-    "for settings in settings_list:\n",
-    "    print(settings['trial_name'])"
+    "# for settings in settings_list:\n",
+    "#     print(settings['trial_name'])\n",
+    "\n",
+    "#----------------------------------------------------\n",
+    "# Count trials of each type.\n",
+    "\n",
+    "trials = [ {k:s[k] for k in ['trial_name','n_ind','pop']} for s in settings_list ]\n",
+    "trials = pd.DataFrame(trials) #.set_index('trial_name')\n",
+    "grouped_trials = trials.groupby(['pop','n_ind'])\n",
+    "count  = pd.DataFrame(grouped_trials['trial_name'].count().rename('count'))\n",
+    "count  = count.unstack(1)\n",
+    "count.columns = count.columns.droplevel()\n",
+    "count[pd.isna(count)] = 0\n",
+    "count  = count.astype(int)\n",
+    "display(count)"
    ]
   },
   {
@@ -129,9 +160,9 @@
     "                shutil.copy2(f1,f2)\n",
     "    \n",
     "    # Otherwise, compute background.\n",
-    "    if (not osp.exists(osp.join(tracker.output_dir, 'background.pik'))) or \\\n",
+    "    if (not osp.exists(osp.join(tracker.output_dir, 'background.npz'))) or \\\n",
     "       (settings['bkg.secondary_subtraction'] and \\\n",
-    "          (not osp.exists(osp.join(tracker.output_dir, 'background2.pik')))):\n",
+    "          (not osp.exists(osp.join(tracker.output_dir, 'background2.npz')))):\n",
     "        tracker.init_video_input()\n",
     "        tracker.init_background()\n",
     "        tracker.init_secondary_background()\n",
@@ -280,7 +311,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.10"
+   "version": "3.8.10"
   }
  },
  "nbformat": 4,
